HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldInitDuplicate/Expected.uv
//! Expected diagnostic metadata for the RecordFieldInitDuplicate rejected-source specimen.

expectedDiagnostic("E-TYP-1903", "rule.16.Record-FieldInit-Dup")
